--- a/webroot/index.html
+++ b/webroot/index.html
@@ -48,10 +48,10 @@
         </div>
         <div class="mdl-cell mdl-cell--4-col">
           Add coin<br>
-          <form>
+          <form class="add-symbol-form" action="#">
             Symbol <input type="text" name="symbol">
             Number of coins <input type="number" name="q">
-            <button type="submit">Add</button>
+            <button type="submit" class="symbol-add">Add</button>
           </form>
         </div>
         <div class="mdl-cell mdl-cell--4-col">4</div>
@@ -59,6 +59,11 @@
 
     </div>
   </main>
+</div>
+
+<div id="demo-snackbar-example" class="mdl-js-snackbar mdl-snackbar">
+  <div class="mdl-snackbar__text"></div>
+  <button class="mdl-snackbar__action" type="button"></button>
 </div>
 
 <script src="scf.js"></script>
