--- a/webroot/index.html
+++ b/webroot/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/sha1.min.js"></script>
 
   <title>SafeCoinFolio - private and safe cryptocurrency portfolio in your browser</title>
 </head>
@@ -43,6 +44,8 @@
 
       <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--4-col">
+          <div class="auth-form"></div>
+
           <h2>Your portfolio</h2>
           <div class="portfolio_table"></div>
         </div>
