--- a/webroot/index.html
+++ b/webroot/index.html
@@ -20,6 +20,20 @@
     <div class="page-content">
 
       <div class="mdl-grid">
+        <div class="mdl-cell mdl-cell--12-col">
+          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+            AUTH
+          </button>
+          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+            BACKUP
+          </button>
+          <!--<button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-js-ripple-effect">-->
+            <!--RESTORE-->
+          <!--</button>-->
+        </div>
+      </div>
+
+      <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--4-col">
           <div class="auth-form"></div>
 
