--- a/webroot/index.html
+++ b/webroot/index.html
@@ -20,24 +20,13 @@
     <div class="page-content">
 
       <div class="mdl-grid">
-        <div class="mdl-cell mdl-cell--12-col">
-          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-            AUTH
-          </button>
-          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-            BACKUP
-          </button>
-          <!--<button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-js-ripple-effect">-->
-            <!--RESTORE-->
-          <!--</button>-->
-        </div>
-      </div>
-
-      <div class="mdl-grid">
-        <div class="mdl-cell mdl-cell--4-col">
+        <div class="mdl-cell mdl-cell--8-col">
           <div class="auth-form"></div>
 
           <h2>Your portfolio</h2>
+
+          <div><span class="total_usd">-</span> USD</div>
+
           <div class="portfolio_table"></div>
         </div>
         <div class="mdl-cell mdl-cell--4-col">
@@ -47,8 +36,19 @@
             Number of coins <input type="number" name="q">
             <button type="submit" class="symbol-add">Add</button>
           </form>
+
+          <div>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+              AUTH
+            </button>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+              BACKUP
+            </button>
+            <!--<button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-js-ripple-effect">-->
+            <!--RESTORE-->
+            <!--</button>-->
+          </div>
         </div>
-        <div class="mdl-cell mdl-cell--4-col">4</div>
       </div>
 
     </div>
