--- a/webroot/index.html
+++ b/webroot/index.html
@@ -23,9 +23,9 @@
         <div class="mdl-cell mdl-cell--8-col">
           <div class="auth-form"></div>
 
-          <h2>Your portfolio</h2>
+          <h2>Your safecoin portfolio -- always your data, encrypted and on your device</h2>
 
-          <div><span class="total_usd">-</span> USD</div>
+          <div>Total <span class="total_usd">-</span> USD</div>
 
           <div class="portfolio_table"></div>
         </div>
@@ -47,6 +47,14 @@
             <!--<button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-js-ripple-effect">-->
             <!--RESTORE-->
             <!--</button>-->
+          </div>
+
+          <div>
+            <h2>How this works</h2>
+          </div>
+
+          <div>
+            <a href="/supported-coins.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Supported coins</a>
           </div>
         </div>
       </div>
