--- a/webroot/index.html
+++ b/webroot/index.html
@@ -68,6 +68,38 @@
         </div>
       </div>
 
+      <footer class="mdl-mega-footer">
+        <div class="mdl-mega-footer__middle-section">
+
+          <div class="mdl-mega-footer__drop-down-section">
+            <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
+            <h1 class="mdl-mega-footer__heading">Donate</h1>
+            <ul class="mdl-mega-footer__link-list">
+              <li><a href="#">ETD: 0x</a></li>
+              <li><a href="#">BTC: ...</a></li>
+            </ul>
+          </div>
+
+          <div class="mdl-mega-footer__drop-down-section">
+            <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
+            <h1 class="mdl-mega-footer__heading">Details</h1>
+            <ul class="mdl-mega-footer__link-list">
+              <li><a href="#">Supported coins</a></li>
+              <li><a href="#">Price API</a></li>
+            </ul>
+          </div>
+
+        </div>
+
+        <div class="mdl-mega-footer__bottom-section">
+          <div class="mdl-logo">www.safecoinfolio.com</div>
+          <ul class="mdl-mega-footer__link-list">
+            <li><a href="#">Privacy & Terms</a></li>
+          </ul>
+        </div>
+
+      </footer>
+
     </div>
   </main>
 </div>
