--- a/webroot/index.html
+++ b/webroot/index.html
@@ -11,6 +11,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
 
   <title>SafeCoinFolio - private and safe cryptocurrency portfolio in your browser</title>
+
+  <style>
+    .mdl-layout .mdl-mega-footer__drop-down-section {
+      width: 40%;
+    }
+  </style>
 </head>
 <body>
 
