--- a/webroot/index.html
+++ b/webroot/index.html
@@ -52,12 +52,12 @@
           </form>
 
           <div>
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect change-user">
+            <button class="mdl-button mdl-js-button mdl-button--colored mdl-button--raised change-user">
               CHANGE USER
             </button>
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-              BACKUP CURRENT USER
-            </button>
+            <!--<button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-js-ripple-effect">-->
+              <!--BACKUP CURRENT USER-->
+            <!--</button>-->
             <!--<button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-js-ripple-effect">-->
             <!--RESTORE-->
             <!--</button>-->
