--- a/webroot/index.html
+++ b/webroot/index.html
@@ -135,7 +135,7 @@
 
   </div>
   <div class="mdl-dialog__actions">
-    <button type="button" class="mdl-button">Change</button>
+    <button type="button" class="mdl-button do-change">Change</button>
     <button type="button" class="mdl-button close">Cancel</button>
   </div>
 </dialog>
