--- a/webroot/index.html
+++ b/webroot/index.html
@@ -65,7 +65,7 @@
 
           <div>
             <h2>How this works</h2>
-            <p>All your data are stored encrypted using `CryptoJS.AES` algorithm on your device. This page only makes HTTPS requests to the pricing API. This means that no one can even read which prices are being transferred, although the API provider (3rd party) may log which coin prices you request.</p>
+            <p>All your data are stored locally and the portfolio information is encrypted using `CryptoJS.AES` algorithm on your device. This page only makes HTTPS requests to the pricing API. This means that no one can even read which prices are being transferred, although the API provider (3rd party) may log which coin prices you request. The only unencrypted information is your username.</p>
           </div>
 
           <div>
