--- a/webroot/index.html
+++ b/webroot/index.html
@@ -16,6 +16,13 @@
     .mdl-layout .mdl-mega-footer__drop-down-section {
       width: 40%;
     }
+    .mdl-layout h1 {
+      font-size: 165%;
+      line-height: 1.3em;
+    }
+    .mdl-layout h2 {
+      font-size: 130%;
+    }
   </style>
 </head>
 <body>
@@ -38,20 +45,22 @@
         <div class="mdl-cell mdl-cell--4-col">
 
           <div class="mdl-card mdl-shadow--2dp">
-          <h2>Add coin</h2>
-            <form class="add-symbol-form" action="#">
-              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input class="mdl-textfield__input" type="text" id="symbol" name="symbol">
-                <label class="mdl-textfield__label" for="symbol">Symbol (BTC, DASH, ETH, ...)</label>
-              </div>
+            <div class="mdl-card__supporting-text">
+              <h2>Add coin</h2>
+                <form class="add-symbol-form" action="#">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="text" id="symbol" name="symbol">
+                    <label class="mdl-textfield__label" for="symbol">Symbol (BTC, DASH, ETH, ...)</label>
+                  </div>
 
-              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input class="mdl-textfield__input" type="number" id="q" name="q">
-                <label class="mdl-textfield__label" for="q">Quantity</label>
-              </div>
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="number" id="q" name="q">
+                    <label class="mdl-textfield__label" for="q">Quantity</label>
+                  </div>
 
-              <button type="submit" class="mdl-button mdl-js-button mdl-button--colored mdl-button--raised symbol-add">Add</button>
-            </form>
+                  <button type="submit" class="mdl-button mdl-js-button mdl-button--colored mdl-button--raised symbol-add">Add</button>
+                </form>
+            </div>
           </div>
 
           <div>
