--- a/webroot/index.html
+++ b/webroot/index.html
@@ -63,16 +63,16 @@
             </div>
           </div>
 
-          <div>
-            <button class="mdl-button mdl-js-button mdl-button--colored mdl-button--raised change-user">
-              CHANGE USER
-            </button>
-            <!--<button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-js-ripple-effect">-->
-              <!--BACKUP CURRENT USER-->
-            <!--</button>-->
-            <!--<button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-js-ripple-effect">-->
-            <!--RESTORE-->
-            <!--</button>-->
+          <div class="demo-card-square mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title mdl-card--expand" style="background-color: #a8e8ed;">
+              <h2 class="mdl-card__title-text">Change user</h2>
+            </div>
+
+            <div class="mdl-card__actions mdl-card--border">
+              <button class="mdl-button mdl-js-button mdl-button--colored mdl-button--raised change-user">
+                CHANGE USER
+              </button>
+            </div>
           </div>
 
           <div>
