--- a/webroot/index.html
+++ b/webroot/index.html
@@ -16,6 +16,9 @@
     .mdl-layout .mdl-mega-footer__drop-down-section {
       width: 40%;
     }
+    .mdl-layout .mdl-card {
+      margin: 15px 0;
+    }
     .mdl-layout h1 {
       font-size: 165%;
       line-height: 1.3em;
@@ -67,7 +70,10 @@
             <div class="mdl-card__title mdl-card--expand" style="background-color: #a8e8ed;">
               <h2 class="mdl-card__title-text">Change user</h2>
             </div>
-
+            <div class="mdl-card__supporting-text">
+              Remeber your username and password. They cannot be recovered. Without the correct combination
+              of username and password the portfolio cannot be retrieved and will be lost.
+            </div>
             <div class="mdl-card__actions mdl-card--border">
               <button class="mdl-button mdl-js-button mdl-button--colored mdl-button--raised change-user">
                 CHANGE USER
@@ -75,13 +81,15 @@
             </div>
           </div>
 
-          <div>
+          <div class="demo-card-square mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__supporting-text">
             <h2>How this works</h2>
             <p>All your data are stored locally and the portfolio information is encrypted using `CryptoJS.AES` algorithm on your device. This page only makes HTTPS requests to the pricing API. This means that no one can even read which prices are being transferred, although the API provider (3rd party) may log which coin prices you request. The only unencrypted information is your username.</p>
           </div>
 
           <div>
             <a href="/supported-coins.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Supported coins</a>
+          </div>
           </div>
         </div>
       </div>
