--- a/webroot/index.html
+++ b/webroot/index.html
@@ -48,8 +48,11 @@
         <div class="mdl-cell mdl-cell--4-col">
 
           <div class="mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title mdl-card--expand" style="background-color: #a8e8ed;">
+              <h2 class="mdl-card__title-text">Add coin</h2>
+            </div>
+
             <div class="mdl-card__supporting-text">
-              <h2>Add coin</h2>
                 <form class="add-symbol-form" action="#">
                   <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                     <input class="mdl-textfield__input" type="text" id="symbol" name="symbol">
@@ -60,9 +63,10 @@
                     <input class="mdl-textfield__input" type="number" id="q" name="q">
                     <label class="mdl-textfield__label" for="q">Quantity</label>
                   </div>
-
-                  <button type="submit" class="mdl-button mdl-js-button mdl-button--colored mdl-button--raised symbol-add">Add</button>
                 </form>
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+              <button type="submit" class="mdl-button mdl-js-button mdl-button--colored mdl-button--raised symbol-add">Add</button>
             </div>
           </div>
 
