--- a/webroot/index.html
+++ b/webroot/index.html
@@ -90,10 +90,6 @@
             <h2>How this works</h2>
             <p>All your data are stored locally and the portfolio information is encrypted using `CryptoJS.AES` algorithm on your device. This page only makes HTTPS requests to the pricing API. This means that no one can even read which prices are being transferred, although the API provider (3rd party) may log which coin prices you request. The only unencrypted information is your username.</p>
           </div>
-
-          <div>
-            <a href="/supported-coins.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Supported coins</a>
-          </div>
           </div>
         </div>
       </div>
@@ -118,7 +114,7 @@
         <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
         <h1 class="mdl-mega-footer__heading">Details</h1>
         <ul class="mdl-mega-footer__link-list">
-          <li><a href="#">Supported coins</a></li>
+          <li><a href="/supported-coins.html">Supported coins</a></li>
           <li><a href="#">Price API</a></li>
         </ul>
       </div>
@@ -141,7 +137,7 @@
 </div>
 
 <dialog class="mdl-dialog">
-  <h4 class="mdl-dialog__title">Change user</h4>
+  <h4 class="mdl-dialog__title">Sign in or create new user</h4>
   <div class="mdl-dialog__content">
 
     <form class="add-symbol-form" action="#">
@@ -159,7 +155,7 @@
 
   </div>
   <div class="mdl-dialog__actions">
-    <button type="button" class="mdl-button do-change">Change</button>
+    <button type="button" class="mdl-button do-change">Go!</button>
     <button type="button" class="mdl-button close">Cancel</button>
   </div>
 </dialog>
