--- a/webroot/supported-coins.html
+++ b/webroot/supported-coins.html
@@ -23,7 +23,25 @@
         <div class="mdl-cell mdl-cell--8-col">
           <a href="/" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Go back</a> to your portfolio
 
-          BTC...
+          <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+            <thead>
+            <tr>
+              <th class="mdl-data-table__cell--non-numeric">Symbol</th>
+              <th>Name</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+              <td class="mdl-data-table__cell--non-numeric">BTC</td>
+              <td class="mdl-data-table__cell--non-numeric">Bitcoin</td>
+            </tr>
+            <tr>
+              <td class="mdl-data-table__cell--non-numeric">ETH</td>
+              <td class="mdl-data-table__cell--non-numeric">Ethereum</td>
+            </tr>
+            </tbody>
+          </table>
+
         </div>
       </div>
 
