--- a/webroot/index.html
+++ b/webroot/index.html
@@ -26,6 +26,9 @@
     .mdl-layout h2 {
       font-size: 130%;
     }
+    .mdl-layout .portfolio_table table {
+      width: 100%;
+    }
   </style>
 </head>
 <body>
@@ -42,6 +45,8 @@
           <h2>Your safecoin portfolio -- always your data, encrypted and on your device</h2>
 
           <div>Total <span class="total_usd">-</span> USD</div>
+
+          <div><em>prices updated every 30 seconds</em></div>
 
           <div class="portfolio_table"></div>
         </div>
