--- a/webroot/index.html
+++ b/webroot/index.html
@@ -29,11 +29,24 @@
     .mdl-layout .portfolio_table table {
       width: 100%;
     }
+    .mdl-layout .mdl-layout__header {
+      background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+    }
+    h1.page-header {
+      color: white;
+      font-weight:800;
+    }
   </style>
 </head>
 <body>
 
 <div class="mdl-layout mdl-js-layout">
+
+  <header class="mdl-layout__header">
+    <div class="mdl-layout__header-row">
+      <span class="mdl-layout-title"><h1 class="page-header">SafeCoinFolio</h1></span>
+    </div>
+  </header>
 
   <main class="mdl-layout__content">
     <div class="page-content">
