--- a/webroot/index.html
+++ b/webroot/index.html
@@ -35,8 +35,13 @@
     h1.page-header {
       color: white;
       font-weight:800;
-      
+      background: url(/static/images/safecoinfolio_logo_128.png) 48px 48px;
+      padding: 0 0 0 50px;
+      background-repeat: no-repeat;
+      padding: 0 0 0 60px;
+      min-height: 48px;
     }
+
   </style>
 </head>
 <body>
@@ -116,38 +121,39 @@
 
 
     </div>
+    <footer class="mdl-mega-footer">
+      <div class="mdl-mega-footer__middle-section">
+
+        <div class="mdl-mega-footer__drop-down-section">
+          <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
+          <h1 class="mdl-mega-footer__heading">Donate</h1>
+          <ul class="mdl-mega-footer__link-list">
+            <li><a href="#">ETD: 0x9f4e4e7edddaf0e5c8fa19cc23d8dbf3ce58987c</a></li>
+            <li><a href="#">BTC: 1L6CgJo2dzhTXThatj17RRSzrtfudTkb9b</a></li>
+          </ul>
+        </div>
+
+        <div class="mdl-mega-footer__drop-down-section">
+          <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
+          <h1 class="mdl-mega-footer__heading">Details</h1>
+          <ul class="mdl-mega-footer__link-list">
+            <li><a href="/supported-coins.html">Supported coins</a></li>
+            <li><a href="#">Price API</a></li>
+          </ul>
+        </div>
+
+      </div>
+
+      <div class="mdl-mega-footer__bottom-section">
+        <div class="mdl-logo">www.safecoinfolio.com</div>
+        <ul class="mdl-mega-footer__link-list">
+          <li><a href="#">Privacy & Terms</a></li>
+        </ul>
+      </div>
+
+    </footer>
   </main>
-  <footer class="mdl-mega-footer">
-    <div class="mdl-mega-footer__middle-section">
 
-      <div class="mdl-mega-footer__drop-down-section">
-        <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-        <h1 class="mdl-mega-footer__heading">Donate</h1>
-        <ul class="mdl-mega-footer__link-list">
-          <li><a href="#">ETD: 0x9f4e4e7edddaf0e5c8fa19cc23d8dbf3ce58987c</a></li>
-          <li><a href="#">BTC: 1L6CgJo2dzhTXThatj17RRSzrtfudTkb9b</a></li>
-        </ul>
-      </div>
-
-      <div class="mdl-mega-footer__drop-down-section">
-        <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-        <h1 class="mdl-mega-footer__heading">Details</h1>
-        <ul class="mdl-mega-footer__link-list">
-          <li><a href="/supported-coins.html">Supported coins</a></li>
-          <li><a href="#">Price API</a></li>
-        </ul>
-      </div>
-
-    </div>
-
-    <div class="mdl-mega-footer__bottom-section">
-      <div class="mdl-logo">www.safecoinfolio.com</div>
-      <ul class="mdl-mega-footer__link-list">
-        <li><a href="#">Privacy & Terms</a></li>
-      </ul>
-    </div>
-
-  </footer>
 </div>
 
 <div id="demo-snackbar-example" class="mdl-js-snackbar mdl-snackbar">
