--- a/webroot/index.html
+++ b/webroot/index.html
@@ -35,10 +35,11 @@
     h1.page-header {
       color: white;
       font-weight:800;
-      background: url(/static/images/safecoinfolio_logo_128.png) 48px 48px;
-      padding: 0 0 0 50px;
+      background: url(/static/images/safecoinfolio_logo_128.png) left center;
+      -webkit-background-size: 48px;
+      background-size: 48px;
       background-repeat: no-repeat;
-      padding: 0 0 0 60px;
+      padding: 8px 0 0 60px;
       min-height: 48px;
     }
 
