--- a/webroot/index.html
+++ b/webroot/index.html
@@ -113,7 +113,7 @@
           <div class="demo-card-square mdl-card mdl-shadow--2dp">
             <div class="mdl-card__supporting-text">
             <h2>How this works</h2>
-            <p>All your data are stored locally and the portfolio information is encrypted using `CryptoJS.AES` algorithm (<a href="https://www.google.com.sg/webhp?#safe=on&q=is+aes-256+secure" rel="nofollow" target="_blank">AES-256</a>) on your device. This page only makes HTTPS requests to the pricing API. This means that no one can even read which prices are being transferred, although the API provider (3rd party) may log which coin prices you request. The only unencrypted information is your username.</p>
+            <p>All your data are stored locally and the portfolio information is encrypted using `CryptoJS.AES` algorithm (<a href="https://www.google.com.sg/webhp?#safe=on&q=is+aes-256+secure" rel="nofollow" target="_blank">AES-256</a>) on your device. This page only makes HTTPS requests to the pricing API. This means that no one can even read which prices are being transferred, although the API provider (3rd party) may log which coin prices you request. The only unencrypted information is your username but your username also never leaves this device.</p>
           </div>
           </div>
         </div>
