--- a/webroot/index.html
+++ b/webroot/index.html
@@ -49,6 +49,14 @@
       }
     }
 
+    @media (min-width: 840px) {
+
+      .inner-grid .mdl-cell--8-col {
+        width: calc(90.666667% - 16px);
+      }
+
+    }
+
   </style>
 </head>
 <body>
