--- a/webroot/index.html
+++ b/webroot/index.html
@@ -51,7 +51,7 @@
 
     @media (min-width: 840px) {
 
-      .inner-grid .mdl-cell--8-col {
+      .container.mdl-cell--8-col {
         width: calc(90.666667% - 16px);
       }
 
@@ -74,7 +74,7 @@
 
       <div class="mdl-grid">
         <div class="mdl-layout-spacer"></div>
-        <div class="mdl-cell mdl-cell--8-col">
+        <div class="mdl-cell mdl-cell--8-col container">
 
           <div class="auth-form"></div>
 
