--- a/webroot/index.html
+++ b/webroot/index.html
@@ -7,8 +7,8 @@
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
+  <script defer src="/static/js/material.min.js"></script>
+  <script src="/static/js/crypto-js.min.js"></script>
 
   <title>SafeCoinFolio - private and safe cryptocurrency portfolio in your browser</title>
 
@@ -163,6 +163,14 @@
           <ul class="mdl-mega-footer__link-list">
             <li><a href="/supported-coins.html">Supported coins</a></li>
             <li><a href="#">Price API</a></li>
+          </ul>
+        </div>
+
+        <div class="mdl-mega-footer__drop-down-section">
+          <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
+          <h1 class="mdl-mega-footer__heading">Contact</h1>
+          <ul class="mdl-mega-footer__link-list">
+            <li><span>support</span><span style="visibility: hidden">hello</span> (at) <span>safecoinfolio.com</span></li>
           </ul>
         </div>
 
