--- a/webroot/supported-coins.html
+++ b/webroot/supported-coins.html
@@ -7,8 +7,10 @@
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
+  <link rel="stylesheet" href="/static/css/main.css">
+
+  <script defer src="/static/js/material.min.js"></script>
+  <script src="/static/js/crypto-js.min.js"></script>
 
   <title>SafeCoinFolio - private and safe cryptocurrency portfolio in your browser</title>
 </head>
@@ -31,14 +33,6 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-              <td class="mdl-data-table__cell--non-numeric">BTC</td>
-              <td class="mdl-data-table__cell--non-numeric">Bitcoin</td>
-            </tr>
-            <tr>
-              <td class="mdl-data-table__cell--non-numeric">ETH</td>
-              <td class="mdl-data-table__cell--non-numeric">Ethereum</td>
-            </tr>
             </tbody>
           </table>
 
@@ -50,5 +44,22 @@
 </div>
 
 <script src="scf.js"></script>
+<script>
+
+function fc(str) {
+  return str.charAt(0).toUpperCase() + str.slice(1)
+}
+
+var html = '';
+for (var symbol in MAPPING) {
+  var html += '<tr>\
+    <td class="mdl-data-table__cell--non-numeric">' + symbol.toUpperCase() + '</td>\
+    <td class="mdl-data-table__cell--non-numeric">' + fc(MAPPING[symbol]) + '</td>\
+  </tr>';
+}
+
+document.querySelector('tbody').innerHTML = html;
+
+</script>
 </body>
 </html>
