--- a/webroot/supported-coins.html
+++ b/webroot/supported-coins.html
@@ -18,11 +18,19 @@
 
 <div class="mdl-layout mdl-js-layout">
 
+  <header class="mdl-layout__header">
+    <div class="mdl-layout__header-row">
+      <span class="mdl-layout-title"><h1 class="page-header">SafeCoinFolio</h1></span>
+    </div>
+  </header>
+
   <main class="mdl-layout__content">
     <div class="page-content">
 
       <div class="mdl-grid">
-        <div class="mdl-cell mdl-cell--8-col">
+        <div class="mdl-layout-spacer"></div>
+        <div class="mdl-cell mdl-cell--8-col container">
+
           <a href="/" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Go back</a> to your portfolio
 
           <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
@@ -37,6 +45,7 @@
           </table>
 
         </div>
+        <div class="mdl-layout-spacer"></div>
       </div>
 
     </div>
