--- a/webroot/index.html
+++ b/webroot/index.html
@@ -112,6 +112,7 @@
           <ul class="mdl-mega-footer__link-list">
             <li><a href="#">ETD: 0x9f4e4e7edddaf0e5c8fa19cc23d8dbf3ce58987c</a></li>
             <li><a href="#">BTC: 1L6CgJo2dzhTXThatj17RRSzrtfudTkb9b</a></li>
+            <li><a href="/backlog.html">Backlog</a></li>
           </ul>
         </div>
 
