--- a/webroot/index.html
+++ b/webroot/index.html
@@ -121,7 +121,7 @@
           <h1 class="mdl-mega-footer__heading">Details</h1>
           <ul class="mdl-mega-footer__link-list">
             <li><a href="/supported-coins.html">Supported coins</a></li>
-            <li><a href="#">Price API</a></li>
+            <li><a href="https://api.coinmarketcap.com/v1/ticker/" target="_blank" rel="nofollow">Price API</a></li>
           </ul>
         </div>
 
@@ -138,7 +138,7 @@
       <div class="mdl-mega-footer__bottom-section">
         <div class="mdl-logo">www.safecoinfolio.com</div>
         <ul class="mdl-mega-footer__link-list">
-          <li><a href="#">Privacy & Terms</a></li>
+          <li><a href="/tc.html">Privacy &amp; Terms</a></li>
         </ul>
       </div>
 
