--- a/webroot/index.html
+++ b/webroot/index.html
@@ -120,6 +120,7 @@
           <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
           <h1 class="mdl-mega-footer__heading">Details</h1>
           <ul class="mdl-mega-footer__link-list">
+            <li><a href="/os.html">Open-source</a></li>
             <li><a href="/supported-coins.html">Supported coins</a></li>
             <li><a href="https://api.coinmarketcap.com/v1/ticker/" target="_blank" rel="nofollow">Price API</a></li>
           </ul>
