--- a/webroot/index.html
+++ b/webroot/index.html
@@ -110,7 +110,7 @@
           <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
           <h1 class="mdl-mega-footer__heading">Donate</h1>
           <ul class="mdl-mega-footer__link-list">
-            <li><a href="#">ETD: 0x9f4e4e7edddaf0e5c8fa19cc23d8dbf3ce58987c</a></li>
+            <li><a href="#">ETH: 0x9f4e4e7edddaf0e5c8fa19cc23d8dbf3ce58987c</a></li>
             <li><a href="#">BTC: 1L6CgJo2dzhTXThatj17RRSzrtfudTkb9b</a></li>
             <li><a href="/backlog.html">Backlog</a></li>
           </ul>
