--- a/webroot/backlog.html
+++ b/webroot/backlog.html
@@ -34,6 +34,7 @@
 
           <div>
             <a href="/" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Go back</a> to your portfolio
+            <br>
           </div>
 
           <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
@@ -72,6 +73,11 @@
                 <td class="mdl-data-table__cell--non-numeric">Backup the portfolio into an encrypted file</td>
                 <td class="mdl-data-table__cell--non-numeric">Download the portfolio into a filesystem and add the ability to restore the portfolio from a file backup</td>
               </tr>
+              <tr>
+                <td class="mdl-data-table__cell--non-numeric">Usable mobile site</td>
+                <td class="mdl-data-table__cell--non-numeric">Improve the mobile site so that it is actually nice to use it</td>
+              </tr>
+
             </tbody>
           </table>
 
