add 9 decimal step

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -62,7 +62,7 @@
                     </div>
 
                     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                      <input class="mdl-textfield__input" type="number" id="q" name="q">
+                      <input class="mdl-textfield__input" type="number" step="0.000000001" id="q" name="q">
                       <label class="mdl-textfield__label" for="q">Quantity</label>
                     </div>
                   </form>
