update price every 300s

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -42,7 +42,7 @@
 
               <div>Total <span class="total_usd">-</span> USD</div>
 
-              <div><em>prices updated every 30 seconds</em></div>
+              <div><em>prices updated every 5 minutes</em></div>
 
               <div class="portfolio_table"></div>
             </div>
