--- a/webroot/index.html
+++ b/webroot/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
+  <link rel="canonical" href="https://www.safecoinfolio.com">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
   <link rel="stylesheet" href="/static/css/main.css">
@@ -13,9 +14,12 @@
 
   <title>SafeCoinFolio - private and safe cryptocurrency portfolio in your browser</title>
 
-  <style>
-
-  </style>
+  <link rel="icon" type="image/png" href="static/images/safecoinfolio_icon_32.png" sizes="32x32">
+  <meta name="theme-color" content="#0fb8ad">
+  <meta property="og:url" content="https://www.safecoinfolio.com">
+  <meta property="og:title" content="www.safecoinfolio.com">
+  <meta property="og:description" content="www.safecoinfolio.com is a free, open-source, and secure way to track your cryptocurrency assets">
+  <meta property="og:image" content="static/images/safecoinfolio_logo_128.png">
 </head>
 <body>
 
