--- a/webroot/supported-coins.html
+++ b/webroot/supported-coins.html
@@ -13,6 +13,14 @@
   <script src="/static/js/crypto-js.min.js"></script>
 
   <title>SafeCoinFolio - private and safe cryptocurrency portfolio in your browser</title>
+
+  <link rel="icon" type="image/png" href="static/images/safecoinfolio_icon_32.png" sizes="32x32">
+  <meta name="theme-color" content="#0fb8ad">
+  <meta property="og:url" content="https://www.safecoinfolio.com">
+  <meta property="og:title" content="www.safecoinfolio.com">
+  <meta property="og:description" content="www.safecoinfolio.com is a free, open-source, and secure way to track your cryptocurrency assets">
+  <meta property="og:image" content="static/images/safecoinfolio_logo_128.png">
+
 </head>
 <body>
 
