--- a/webroot/index.html
+++ b/webroot/index.html
@@ -112,7 +112,7 @@
 
         <div class="mdl-mega-footer__drop-down-section">
           <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-          <h1 class="mdl-mega-footer__heading">Donate</h1>
+          <h1 class="mdl-mega-footer__heading">Donate to help the development of this service</h1>
           <ul class="mdl-mega-footer__link-list">
             <li><a href="#">ETH: 0x9f4e4e7edddaf0e5c8fa19cc23d8dbf3ce58987c</a></li>
             <li>BTC: <a href="bitcoin://1LjYtBXHviuSTfowy4eBCiazJeEPV7wfFA">1LjYtBXHviuSTfowy4eBCiazJeEPV7wfFA</a></li>
