add github repo link

--- a/webroot/os.html
+++ b/webroot/os.html
@@ -45,6 +45,9 @@
           </div>
 
           <div>
+              <p>
+              All source code is located at <a href="https://github.com/safecoinfolio/safecoinfolio" target="_blank">https://github.com/safecoinfolio/safecoinfolio</a>
+              </p>
           <p>This website is offered under the <a href="/tc.html">GNU license</a> and is open source -- all source code is freely available as there is no server side code. In addition to that, we are planning on releasing the <em>git</em> repository publicly online as well.</p>
   </div>
 </div>
