add backlog item

--- a/webroot/backlog.html
+++ b/webroot/backlog.html
@@ -85,6 +85,10 @@
                 <td class="mdl-data-table__cell--non-numeric">Usable mobile site</td>
                 <td class="mdl-data-table__cell--non-numeric">Improve the mobile site so that it is actually nice to use it</td>
               </tr>
+              <tr>
+                <td class="mdl-data-table__cell--non-numeric">Load balanced server nodes</td>
+                <td class="mdl-data-table__cell--non-numeric">Removes the downtime when new version is being deployed</td>
+              </tr>
 
             </tbody>
           </table>
